--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-     <script src="models/drawable-object.class.js"></script>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>El Pollo Loco!</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="models/drawable-object.class.js"></script>
     <script src="models/status-bar.class.js"></script>
+    <script src="models/status-bar-coins.class.js"></script>
+    <script src="models/status-bar-bottle.class.js"></script>
+    <script src="models/status-bar-endboss.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/character.class.js"></script>
-    <script src="models/chicken.class.js"> </script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/little-chicken.class.js"></script>
+    <script src="models/coins.class.js"></script>
+    <script src="models/bottles.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
@@ -19,11 +25,13 @@
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
-</head>
-<body onload="init()">
-    <h1>El pollo loco</h1>
+  </head>
+  <body onload="init()">
+    <h1>El Pollo Loco!</h1>
     <canvas id="canvas" width="720px" height="480"></canvas>
-
-
-</body>
+    <div class="informationforSmartphones">
+      <h3>In den Quermodus wechseln!</h3>
+      <img src="" alt="" />
+    </div>
+  </body>
 </html>
