--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Pollo Loco!</title>
+    <link rel="icon" type="image/x-icon" href="img/3_enemies_chicken/chicken_small/1_walk/1_w.png">
     <link rel="stylesheet" href="style.css" />
     <script src="models/drawable-object.class.js"></script>
     <script src="models/status-bar.class.js"></script>
@@ -25,10 +26,76 @@
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/loadingGame.js"></script>
   </head>
-  <body onload="init()">
-    <h1>El Pollo Loco!</h1>
-    <canvas id="canvas" width="720px" height="480"></canvas>
+  <body onload="">
+    <h1>¡El Pollo Loco!</h1>
+    <div id="fullscreen" class="playScreen">
+      <div class="settings">
+        <div id="sound" class="sound" onclick="muteIt()"><img id="soundIMG" src="img/background/sound.svg" alt=""></div>
+        <div id="screenSizing" class="screenSizing" onclick="biggerScreenSize()"><img id="fullscreenSymbol" src="img/background/fullscreenSymbol.svg" alt=""></div>
+      </div>
+      <canvas id="canvas" width="720px" height="480"></canvas>
+      <div id="startScreen" class="startScreen">
+        <img
+          id="startScreenIMG"
+          src="img/9_intro_outro_screens/start/startscreen_1.png"
+          alt=""
+        />
+        <div
+          onclick="loadGameInstructions()"
+          id="playButton"
+          class="playButton"
+        >
+          Iniciar Juego
+        </div>
+      </div>
+      <div id="instructions" class="instructions startScreen">
+        <img
+          id="startScreenIMG"
+          class="descriptionIMG"
+          src="img/9_intro_outro_screens/start/startscreen_1.png"
+          alt=""
+        />
+        <div class="description">
+          ¡Bienvenidos al desierto mexicano! En El Pollo Loco, eres Pepe, un
+          héroe que debe derrotar a la temible Señora Gallina, un pollo gigante
+          y loco. Recorre el desierto, recoge monedas y salsa Tabasco, tu única
+          arma contra este monstruo emplumado. ¡Prepárate para una batalla muy
+          picante!
+          <div class="keys">
+            <div class="howToMove">Así te mueves:</div>
+            <div class="overKeyDescription">
+              <div class="keysToPlay">
+                <img
+                  class="arrowKeysIMG spaceBar"
+                  src="img/background/spaceBar.jpg"
+                  alt=""
+                />
+                <div class="seperatorKeys">Y</div>
+                <img
+                  class="arrowKeysIMG"
+                  src="img/background/arrowKeys.png"
+                  alt=""
+                />
+              </div>
+              <div class="keysToPlay">
+                <div class="dKey">D</div>
+                <div class="seperatorKeys">Para tirar</div>
+                <img src="img/background/salsaBottle.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div
+            onclick="removeStartScreen(); initLevel(); init()"
+            id="startGame"
+            class="startGameButton"
+          >
+            ¡Listo!
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="informationforSmartphones">
       <h3>In den Quermodus wechseln!</h3>
       <img src="" alt="" />
