--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
-    
+
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
     <script src="models/world.class.js"></script>
     <script src="js/loadingGame.js"></script>
   </head>
-  <body onload="">
-    <h1>¡El Pollo Loco!</h1>
+  <body>
+    <h1><a href="index.html">¡El Pollo Loco!</a></h1>
     <div id="fullscreen" class="playScreen">
-      <div class="settings">
+      <div class="inGameButtons">
         <div id="sound" class="sound" onclick="muteIt()">
           <img id="soundIMG" src="img/background/sound.svg" alt="" />
         </div>
@@ -51,6 +51,7 @@
             alt=""
           />
         </div>
+
       </div>
       <canvas id="canvas" width="720px" height="480"></canvas>
       <div id="startScreen" class="startScreen">
@@ -113,21 +114,30 @@
         </div>
       </div>
       <div id="victory" class="victory startScreen">
-        <img
-          id="victoryIMG"
-          src="img/9_intro_outro_screens/win/win_2.png"
-          alt=""
-        />
-        <div class="playAgain">
-          Nochmals spielen
+        <div class="endGame">
+          <img
+            id="victoryIMG"
+            class=""
+            src="img/9_intro_outro_screens/win/win_2.png"
+            alt=""
+          />
+          <div class="options">
+            <img class="repeatIcon" src="img/background/repeat.svg" alt="" />
+          </div>
         </div>
       </div>
       <div id="lose" class="lose startScreen">
-        <img
-          id="loseIMG"
-          src="img/9_intro_outro_screens/game_over/game over!.png"
-          alt=""
-        />
+        <div class="endGame">
+          <img
+            id="loseIMG"
+            class=""
+            src="img/9_intro_outro_screens/game_over/game over!.png"
+            alt=""
+          />
+          <div class="options">
+            <img class="repeatIcon" src="img/background/repeat.svg" alt="" />
+          </div>
+        </div>
       </div>
     </div>
     <div class="informationforSmartphones">
