--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,7 +29,8 @@
     <script src="models/throwable-object.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="models/world.class.js"></script>
-    <script src="js/loadingGame.js"></script>
+    <script src="js/screens.js"></script>
+    <script src="js/audio.js"></script>
     <script src="js/game.js"></script>
   </head>
   <body>
@@ -167,9 +168,14 @@
             src="img/9_intro_outro_screens/win/win_2.png"
             alt=""
           />
-          <div class="options">
-            <img class="repeatIcon" src="img/background/repeat.svg" alt="" />
+          <div
+            onclick="hideVictory(); initLevel(); init()"
+            id="startGame"
+            class="optionButtons"
+          >
+            ¡Otra vez!
           </div>
+          <a href="index.html" class="optionButtons">¡Terminar!</a>
         </div>
       </div>
       <div id="lose" class="lose startScreen">
@@ -180,8 +186,15 @@
             src="img/9_intro_outro_screens/game_over/game over!.png"
             alt=""
           />
-          <div class="options">
-            <img class="repeatIcon" src="img/background/repeat.svg" alt="" />
+          <div class="repeatOrHome">
+            <div
+              onclick="hideLose(); initLevel(); init()"
+              id="startGame"
+              class="optionButtons"
+            >
+              ¡Otra vez!
+            </div>
+            <a href="index.html" class="optionButtons">¡Terminar!</a>
           </div>
         </div>
       </div>
