--- a/index.html
+++ b/index.html
@@ -168,14 +168,16 @@
             src="img/9_intro_outro_screens/win/win_2.png"
             alt=""
           />
-          <div
-            onclick="hideVictory(); initLevel(); init()"
-            id="startGame"
-            class="optionButtons"
-          >
-            ¡Otra vez!
+          <div class="repeatOrHome">
+            <div
+              onclick="hideVictory(); initLevel(); init()"
+              id="startGame"
+              class="optionButtons"
+            >
+              ¡Otra vez!
+            </div>
+            <a href="index.html" class="optionButtons">¡Terminar!</a>
           </div>
-          <a href="index.html" class="optionButtons">¡Terminar!</a>
         </div>
       </div>
       <div id="lose" class="lose startScreen">
