--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
       </div>
     </div>
-    <div class="informationforSmartphones">
+    <div id="changeToLandscape" class="changeToLandscape">
       <h3>In den Quermodus wechseln!</h3>
       <img src="" alt="" />
     </div>
