--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script src="models/status-bar-endboss.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/character.class.js"></script>
-    <script src="models/endboss.class.js"></script>
     <script src="models/chicken.class.js"></script>
     <script src="models/little-chicken.class.js"></script>
     <script src="models/coins.class.js"></script>
@@ -32,6 +31,7 @@
     <script src="js/screens.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/game.js"></script>
+    <script src="models/endboss.class.js"></script>
   </head>
   <body>
     <div id="insertImprint" class="hidden">
@@ -40,15 +40,47 @@
           <div class="overContent">
             <div class="titleSection">
               <div class="titleImprint">Impressum</div>
-              <div onclick="closeImprint()" class="closeButton">X</div>
             </div>
             <div class="information">
-              Brian Wigger <br />
-              Matte 16 <br />
-              6025 Neudorf <br />
-              brian.wigger@bluewin.ch
+              <div class="content-generator-output">
+                <b>Verantwortliche Instanz:</b><br />Brian Wigger<br />Matte
+                16<br />6025 Neudorf<br />Schweiz<br /><strong>E-Mail</strong>:
+                brian.wigger@bluewin.ch<br /><br /><strong
+                  >Haftungsausschluss</strong
+                ><br />Der Autor übernimmt keine Gewähr für die Richtigkeit,
+                Genauigkeit, Aktualität, Zuverlässigkeit und Vollständigkeit der
+                Informationen.<br />Haftungsansprüche gegen den Autor wegen
+                Schäden materieller oder immaterieller Art, die aus dem Zugriff
+                oder der Nutzung bzw. Nichtnutzung der veröffentlichten
+                Informationen, durch Missbrauch der Verbindung oder durch
+                technische Störungen entstanden sind, werden ausgeschlossen.<br /><br />Alle
+                Angebote sind freibleibend. Der Autor behält es sich
+                ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne
+                gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen
+                oder die Veröffentlichung zeitweise oder endgültig
+                einzustellen.<br /><br /><strong
+                  >Haftungsausschluss für Inhalte und Links</strong
+                ><br />Verweise und Links auf Webseiten Dritter liegen
+                ausserhalb unseres Verantwortungsbereichs. Es wird jegliche
+                Verantwortung für solche Webseiten abgelehnt. Der Zugriff und
+                die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
+                jeweiligen Nutzers.<br /><br /><strong
+                  >Urheberrechtserklärung</strong
+                ><br />Die Urheber- und alle anderen Rechte an Inhalten,
+                Bildern, Fotos oder anderen Dateien auf dieser Website, gehören
+                ausschliesslich Brian Wigger oder den speziell genannten
+                Rechteinhabern. Für die Reproduktion jeglicher Elemente ist die
+                schriftliche Zustimmung des Urheberrechtsträgers im Voraus
+                einzuholen.<br /><br /><strong>Quelle</strong>:
+                <a
+                  style="color: inherit; text-decoration: none"
+                  href="https://brainbox.swiss/"
+                  >BrainBox Solutions</a
+                >
+              </div>
             </div>
           </div>
+          <div onclick="closeImprint()" class="closeButton">X</div>
         </div>
       </div>
     </div>
