--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           />
           <div class="repeatOrHome">
             <div
-              onclick="hideVictory(); initLevel(); init()"
+              onclick="hideVictory(); init()"
               id="startGame"
               class="optionButtons"
             >
@@ -222,7 +222,7 @@
           />
           <div class="repeatOrHome">
             <div
-              onclick="hideLose(); initLevel(); init()"
+              onclick="hideLose(); init()"
               id="startGame"
               class="optionButtons"
             >
